--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <img 
           src="img/favicon.png" 
           arl="ゆきやまのアイコン"
-          width="180"
-          height="180"> 
+          width="120"
+          height="120"> 
       </div>
       <div>
-        <h1>No Rose without a Thorn</h1>
+        <h1>No Rose</h1>
+        <h1>without a Thorn</h1>
         <p>お花に癒されながらプログラミング学習中です！</p>
         <ul>
           <li>
@@ -52,8 +53,8 @@
        <img
          src="img/flower1.jpg"
          alt="リューココリーネ"
-         width="600"
-         height="420">
+         width="400"
+         height="280">
        <h2>リューココリーネ</h2>
          <p>リューココリーネはバニラのような甘い香り。チューリップは３種類。<br>バラ、スイトピー、レースフラワーなど</p>
      </section>
@@ -61,8 +62,8 @@
        <img
         src="img/flower2.jpg"
         alt="冬のおまかせブーケ"
-        width="600"
-        height="420">
+        width="400"
+        height="280">
       <h2>冬のおまかせブーケ</h2>
         <p>白いバラと白いチューリップ、ストックとグリーンとホワイトの清潔感のあるブーケ。<br>小さな桃の花が春を予感させる。</p>
      </section>
@@ -70,8 +71,8 @@
       <img
         src="img/flower3.jpg"
         alt="お正月のブーケ"
-        width="600"
-        height="450">
+        width="400"
+        height="300">
        <h2>お正月のブーケ</h2>
          <p>名古屋駅の小さなお花屋さんで購入。明るいピンクとカーネーションに<br>季節らしい葉ボタンとゴールドにカラーリングされた小枝を添えて</p>
      </section>
