--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li>
             <a href="">
             <img 
-              link="http://twitter.com/mtnieve_"
+              link="https://twitter.com/mtnieve_"
               src="img/twitter-icon.png" 
               alt="twitterのアイコン"
               width="22"
