--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="https://twitter.com/mtnieve_">
             <img 
-              link="https://twitter.com/mtnieve_"
               src="img/twitter-icon.png" 
               alt="twitterのアイコン"
               width="22"
