--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
          width="400"
          height="280">
        <h2>リューココリーネ</h2>
-         <p>リューココリーネはバニラのような甘い香り。<br>チューリップは３種類。<br>バラ、スイトピー、レースフラワーなど</p>
+         <p>リューココリーネはバニラのような甘い香り<br>チューリップは３種類<br>バラ、スイトピー、レースフラワーなど</p>
      </section>
      <section>
        <img
@@ -64,7 +64,7 @@
         width="400"
         height="280">
       <h2>冬のおまかせブーケ</h2>
-        <p>白いバラと白いチューリップ、ストックと<br>グリーンとホワイトの清潔感のあるブーケ。<br>小さな桃の花が春を予感させる。</p>
+        <p>白いバラと白いチューリップ、ストックと<br>グリーンとホワイトの清潔感のあるブーケ<br>小さな桃の花が春を予感させる</p>
      </section>
      <section>
       <img
@@ -73,7 +73,7 @@
         width="400"
         height="300">
        <h2>お正月のブーケ</h2>
-         <p>名古屋駅の小さなお花屋さんで購入。<br>明るいピンクとカーネーションに<br>季節らしい葉ボタンとゴールドの小枝を添えて</p>
+         <p>名古屋駅の小さなお花屋さんで購入<br>明るいピンクとカーネーションに<br>季節らしい葉ボタンとゴールドの小枝を添えて</p>
      </section>
     </div>
 
