--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         width="400"
         height="280">
       <h2>冬のおまかせブーケ</h2>
-        <p>白いバラと白いチューリップ、ストックと<br>グリーンとホワイトの清潔感のあるブーケ<br>小さな桃の花が春を予感させる</p>
+        <p>白いバラと白いチューリップ、ストック<br>グリーンとホワイトの清潔感のあるブーケ<br>小さな桃の花が春を予感させる</p>
      </section>
      <section>
       <img
